@startuml

title __ENTITY_SYSTEMS's Class Diagram__\n

  namespace no.ntnu.idi.apollo69server {
    namespace game_engine {
      namespace entity_systems {
        class no.ntnu.idi.apollo69server.game_engine.entity_systems.AsteroidSystem {
            - AMOUNT_OF_ASTEROIDS_TO_KEEP_ON_THE_MAP : int
            - asteroids : ImmutableArray<Entity>
            + AsteroidSystem()
            + addedToEngine()
            + update()
        }
      }
    }
  }
  

  namespace no.ntnu.idi.apollo69server {
    namespace game_engine {
      namespace entity_systems {
        class no.ntnu.idi.apollo69server.game_engine.entity_systems.DamageSystem {
            - objectsThatCanDealDamage : ImmutableArray<Entity>
            - objectsThatCanReceiveDamage : ImmutableArray<Entity>
            + DamageSystem()
            + addedToEngine()
            + update()
        }
      }
    }
  }
  

  namespace no.ntnu.idi.apollo69server {
    namespace game_engine {
      namespace entity_systems {
        class no.ntnu.idi.apollo69server.game_engine.entity_systems.DeathSystem {
            - entities : ImmutableArray<Entity>
            + DeathSystem()
            + addedToEngine()
            + update()
        }
      }
    }
  }
  

  namespace no.ntnu.idi.apollo69server {
    namespace game_engine {
      namespace entity_systems {
        class no.ntnu.idi.apollo69server.game_engine.entity_systems.MovementSystem {
            - entities : ImmutableArray<Entity>
            - interval : float
            - timeAccumulator : float
            + MovementSystem()
            + addedToEngine()
            + update()
            - move()
        }
      }
    }
  }
  

  namespace no.ntnu.idi.apollo69server {
    namespace game_engine {
      namespace entity_systems {
        class no.ntnu.idi.apollo69server.game_engine.entity_systems.PickupSystem {
            - pickups : ImmutableArray<Entity>
            - spaceships : ImmutableArray<Entity>
            + PickupSystem()
            + addedToEngine()
            + update()
            - handleGemPickup()
        }
      }
    }
  }
  

  namespace no.ntnu.idi.apollo69server {
    namespace game_engine {
      namespace entity_systems {
        class no.ntnu.idi.apollo69server.game_engine.entity_systems.PowerupSystem {
            - energys : ImmutableArray<Entity>
            - engine : Engine
            - invisibles : ImmutableArray<Entity>
            - powerups : ImmutableArray<Entity>
            - shields : ImmutableArray<Entity>
            - spaceships : ImmutableArray<Entity>
            + PowerupSystem()
            + addedToEngine()
            + update()
            - handlePickup()
        }
      }
    }
  }
  

  namespace no.ntnu.idi.apollo69server {
    namespace game_engine {
      namespace entity_systems {
        class no.ntnu.idi.apollo69server.game_engine.entity_systems.ReceivePlayerInputSystem {
            - inputQueue : Queue<PlayerInput>
            - players : ImmutableArray<Entity>
            + ReceivePlayerInputSystem()
            + addedToEngine()
            + update()
            - processInput()
        }
      }
    }
  }
  

  namespace no.ntnu.idi.apollo69server {
    namespace game_engine {
      namespace entity_systems {
        class no.ntnu.idi.apollo69server.game_engine.entity_systems.SendUpdateSystem {
            - asteroids : ImmutableArray<Entity>
            - explosions : ImmutableArray<Entity>
            - interval : float
            - pickups : ImmutableArray<Entity>
            - players : ImmutableArray<Entity>
            - powerups : ImmutableArray<Entity>
            - timeAccumulator : float
            + SendUpdateSystem()
            + addedToEngine()
            + update()
            - createUpdateMessage()
            - sendUpdate()
        }
      }
    }
  }
  

  namespace no.ntnu.idi.apollo69server {
    namespace game_engine {
      namespace entity_systems {
        class no.ntnu.idi.apollo69server.game_engine.entity_systems.ShootingSystem {
            - interval : float
            - playerEntities : ImmutableArray<Entity>
            - timeAccumulator : float
            + ShootingSystem()
            + addedToEngine()
            + update()
        }
      }
    }
  }
  

  namespace no.ntnu.idi.apollo69server {
    namespace game_engine {
      namespace entity_systems {
        class no.ntnu.idi.apollo69server.game_engine.entity_systems.SpawnSystem {
            - entities : ImmutableArray<Entity>
            + SpawnSystem()
            + addedToEngine()
            + update()
        }
      }
    }
  }
  

  namespace no.ntnu.idi.apollo69server {
    namespace game_engine {
      namespace entity_systems {
        class no.ntnu.idi.apollo69server.game_engine.entity_systems.TimeToLiveSystem {
            - entities : ImmutableArray<Entity>
            + TimeToLiveSystem()
            + addedToEngine()
            + update()
        }
      }
    }
  }
  

  namespace no.ntnu.idi.apollo69server {
    namespace game_engine {
      namespace entity_systems {
        class no.ntnu.idi.apollo69server.game_engine.entity_systems.UpdateBoundsSystem {
            - entities : ImmutableArray<Entity>
            + UpdateBoundsSystem()
            + addedToEngine()
            + update()
        }
      }
    }
  }
  

  no.ntnu.idi.apollo69server.game_engine.entity_systems.AsteroidSystem -up-|> com.badlogic.ashley.core.EntitySystem
  no.ntnu.idi.apollo69server.game_engine.entity_systems.DamageSystem -up-|> com.badlogic.ashley.core.EntitySystem
  no.ntnu.idi.apollo69server.game_engine.entity_systems.DeathSystem -up-|> com.badlogic.ashley.core.EntitySystem
  no.ntnu.idi.apollo69server.game_engine.entity_systems.MovementSystem -up-|> com.badlogic.ashley.core.EntitySystem
  no.ntnu.idi.apollo69server.game_engine.entity_systems.PickupSystem -up-|> com.badlogic.ashley.core.EntitySystem
  no.ntnu.idi.apollo69server.game_engine.entity_systems.PowerupSystem -up-|> com.badlogic.ashley.core.EntitySystem
  no.ntnu.idi.apollo69server.game_engine.entity_systems.ReceivePlayerInputSystem -up-|> com.badlogic.ashley.core.EntitySystem
  no.ntnu.idi.apollo69server.game_engine.entity_systems.SendUpdateSystem -up-|> com.badlogic.ashley.core.EntitySystem
  no.ntnu.idi.apollo69server.game_engine.entity_systems.ShootingSystem -up-|> com.badlogic.ashley.core.EntitySystem
  no.ntnu.idi.apollo69server.game_engine.entity_systems.ShootingSystem o-- no.ntnu.idi.apollo69server.game_engine.entity_factories.ShotFactory : shotFactory
  no.ntnu.idi.apollo69server.game_engine.entity_systems.SpawnSystem -up-|> com.badlogic.ashley.core.EntitySystem
  no.ntnu.idi.apollo69server.game_engine.entity_systems.TimeToLiveSystem -up-|> com.badlogic.ashley.core.EntitySystem
  no.ntnu.idi.apollo69server.game_engine.entity_systems.UpdateBoundsSystem -up-|> com.badlogic.ashley.core.EntitySystem


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
